--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ios-clean": "clear && cd ios && rm -rf build && xcodebuild clean && pod update && cd .. && npm run ios"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/messaging": "^21.7.1",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
